--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Explore the new PUMA collection online, the latest sports trends in shoes, clothing, accessories, and much more. Run The Streets."/>
-    <meta name="keywords" content="PUMA Shoes Clothing Accessories Sports Training"/>
+    <meta name="description" content="PUMA GUITARS is committed to creating extraordinary musical instruments that enable people to create outstanding music in a simple way."/>
+    <meta name="keywords" content="PUMA Music Guitar Intruments"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>PUMA | Forever Faster.</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abel&family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <title>Puma Guitars | Store</title>
     </head>
 
   <body>
